--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.top-pane{
+  background-color: hsl(225, 6% , 25%);
+}
+
+.pane {
+  height: 50vh;
+  display: flex;
+
+
+}
+
+.editorPane{
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  padding: .5rem;
+}
+
+.editorName {
+  display: flex;
+  justify-content: space-between;
+  background-color: hsl(225, 8%, 10%);
+  color: blanchedalmond;
+  padding:.5rem .5rem ;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+}
+
+.CodeMirror {
+  height: 43vh !important;
+}
+
+.codeMirrorWrapper {
+  flex-grow: 1;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  overflow: hidden;
+
+}
+
+.bottom-pane{
+  height: 50vh;
+  background-color:indianred;
 }
