--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body{
   height: 50vh;
   display: flex;
 
-
 }
 
 .editorPane{
@@ -22,6 +21,11 @@ body{
   padding: .5rem;
 }
 
+.editorPane.collapsed {
+  flex-grow : 0;
+}
+
+
 .editorName {
   display: flex;
   justify-content: space-between;
@@ -31,6 +35,14 @@ body{
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
+}
+
+.exColBtn{
+  background: none;
+  margin-left: .4rem;
+  border: none;
+  color: wheat;
+  cursor: pointer;
 }
 
 .CodeMirror {
